samples/_failures_safe/1761006482_99865a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b92d3200.c: In function ‘main’:
./samples/SAFE/__tmp_b92d3200.c:149:13: error: expected ‘;’ at end of input
  149 |     add_edge
      |             ^
      |             ;
./samples/SAFE/__tmp_b92d3200.c:149:5: error: expected declaration or statement at end of input
  149 |     add_edge
      |     ^~~~~~~~
